--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <html>
   <head>
     <title>Wesley M.S.</title>
+    <style type = "text/css">
+    
+      @font-face {
+        font-family: "Mignone";
+        src: url("http://wesley-ms.github.io/font/Mignone.ttf") format("truetype");
+      }
+      h1 {
+        font-family: "Mignone",Verdana,sans-serif;
+        text-align: center;
+      }
+      
+    </style>
   </head>
   <body>
     <h1>Wesley M.S.</h1>
