--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         src: url("http://wesley-ms.github.io/font/Mignone.ttf") format("truetype");
       }
       h1 {
-        font-family: "Mignone",Verdana,sans-serif;
+        font-family: Verdana,sans-serif;
         text-align: center;
       }
       
