--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
         font-family: "Mignone";
         src: url("http://wesley-ms.github.io/font/Mignone.ttf") format("truetype");
       }
+      @font-face {
+        font-family: "Airstream";
+        src: url("http://wesley-ms.github.io/font/AIRSTREA.TTF") format("truetype");
+      }
+      @font-face {
+        font-family: "Aquino";
+        src: url("http://wesley-ms.github.io/font/aquino-demo.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "Babas Neue";
+        src: url("http://wesley-ms.github.io/font/Babas Neue.otf") format("opentype");
+      }
       h1 {
-        font-family: Verdana,sans-serif;
+        font-family: "Babas Neue", Verdana, sans-serif;
         text-align: center;
       }
       
