--- a/index.html
+++ b/index.html
@@ -6,23 +6,11 @@
     <style type = "text/css">
     
       @font-face {
-        font-family: "Mignone";
-        src: url("http://wesley-ms.github.io/font/Mignone.ttf") format("truetype");
-      }
-      @font-face {
         font-family: "Airstream";
         src: url("http://wesley-ms.github.io/font/AIRSTREA.TTF") format("truetype");
-      }
-      @font-face {
-        font-family: "Aquino";
-        src: url("http://wesley-ms.github.io/font/aquino-demo.ttf") format("truetype");
-      }
-      @font-face {
-        font-family: "Babas Neue";
-        src: url("http://wesley-ms.github.io/font/Babas Neue.otf") format("opentype");
-      }
+      } 
       h1 {
-        font-family: "Babas Neue", Verdana, sans-serif;
+        font-family: "Airstream", Verdana, sans-serif;
         text-align: center;
       }
       
