--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
         font-family: "Airstream", Verdana, sans-serif;
         text-align: center;
       }
+      html {
+        background-color: #EEE;
+      }
       
     </style>
   </head>
   <body>
-    <h1>Wesley M.S.</h1>
+    <p><h1>Wesley M.S.</h1></p>
+    <p><h1>Unfinished Site. Bookmark and check back later.</h1></p>
   </body>
 </html>
