--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <style type = "text/css">
     
       @font-face {
-        font-family: "Airstream";
-        src: url("http://wesley-ms.github.io/font/AIRSTREA.TTF") format("truetype");
+        font-family: "Babas Neue";
+        src: url("http://wesley-ms.github.io/font/BabasNeue.ttf") format("truetype");
       } 
       h1 {
-        font-family: "Airstream", Verdana, sans-serif;
+        font-family: "Babas Neue", Verdana, sans-serif;
         text-align: center;
       }
       html {
