--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
       @font-face {
         font-family: "Babas Neue";
-        src: url("http://wesley-ms.github.io/font/BabasNeue.ttf") format("truetype");
+        src: url("http://wesley-ms.github.io/font/BabasNeue.otf") format("opentype");
       } 
       h1 {
         font-family: "Babas Neue", Verdana, sans-serif;
