--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         src: url("http://wesley-ms.github.io/font/BabasNeue.otf") format("opentype");
       } 
       h1 {
-        font-family: "Babas Neue", Verdana, sans-serif;
+        font-family: "Babas Neue", sans-serif, Verdana;
         text-align: center;
       }
       html {
