--- a/home/template.html
+++ b/home/template.html
@@ -1,3 +1,25 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Wesley</title>
+    <style type = "text/css">
+      div.navber {
+        width:45em;
+				height:4em;
+				background-color:#fff;
+				border-bottom-right-radius:1.5em;
+				position:absolute;
+				z-index:1;
+				transition:top 0.3s;
+				-webkit-transition:top 0.3s;
+				top:-3em;
+      }
+      html {
+        background-color: #eee;
+      }
+    </style>
+  </head>
+  <body>
+    <div class = "navbar"></div>
+  </body>
 </html>
