--- a/home/template.html
+++ b/home/template.html
@@ -3,7 +3,7 @@
   <head>
     <title>Wesley</title>
     <style type = "text/css">
-      navbar {
+      .navbar {
         width:45em;
 				height:4em;
 				background-color:#fff;
