--- a/home/template.html
+++ b/home/template.html
@@ -5,15 +5,18 @@
     <style type = "text/css">
       .navbar {
         width:45em;
-				height:4em;
-				background-color:#fff;
-				border-bottom-right-radius:1.5em;
-				position:absolute;
-				z-index:1;
-				transition:top 0.3s;
-				-webkit-transition:top 0.3s;
-				top:-3em;
+	height:4em;
+	background-color:#fff;
+	border-bottom-right-radius:1.5em;
+	position:absolute;
+	z-index:1;
+	transition:top 0.3s;
+	-webkit-transition:top 0.3s;
+	top:-3em;
       }
+      .navbar:hover{
+				top:0em;
+			}
       html {
         background-color: #eee;
       }
