--- a/home/template.html
+++ b/home/template.html
@@ -13,10 +13,11 @@
 	transition:top 0.3s;
 	-webkit-transition:top 0.3s;
 	top:-3em;
+	left:0em;
       }
       .navbar:hover{
-				top:0em;
-			}
+	top:0em;
+      }
       html {
         background-color: #eee;
       }
