--- a/home/template.html
+++ b/home/template.html
@@ -26,6 +26,8 @@
 	text-decoration:none;
 	color:#00ccff;
 	transition: color 0.5s;
+	text-decoration:none;
+	display:inline-block;
       }
       .navbar h2:hover{
 	color:#55ddff;
