--- a/home/index.html
+++ b/home/index.html
@@ -2,6 +2,6 @@
 <html>
 <head>Home</head>
 <body>
-<iframe src="http://www.google.co.in" name="template" allowTransparency="true" scrolling="no" frameborder="0" ></iframe>
+<iframe src="http://Wesley-MS.github.io/home/template.html" name="template" allowTransparency="true" scrolling="no" frameborder="0" ></iframe>
 </body>
 </html>
